# chris-code

./: .gitignore  Cargo.toml  README.md  adr.md  module-map.md
src/: events.rs  input.rs  lib.rs  llm.rs  main.rs  state.rs  tools.rs  ui.rs
src/tool_definitions/: bash_tool_params.json  read_tool_params.json  write_tool_params.json
