[package]
name = "chris-code"
authors = ["Christopher Mann <8133496+chriswmann@users.noreply.github.com>"]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
] } # async runtime
async-openai = { version = "=0.32.4", features = [
  "byot",
  "chat-completion",
  "response-types",
] }
clap = { version = "4.3.14", features = ["derive"] } # CLI argument parsing
serde_json = "1.0.149" # JSON serialization/deserialization
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
ratatui = "0.30.0"
crossterm = "0.29.0"
color-eyre = "0.6.5"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
